--- a/requirements/main.in
+++ b/requirements/main.in
@@ -5,16 +5,18 @@ SQLAlchemy
 aiofiles
 aiohttp
 aiomultiprocess
+beautifulsoup4
 cachetools
 cython
 cytoolz
 funcy
 httpx
+lxml
 matplotlib
+memory_profiler
 more-itertools
 numba
 numpy
 pandas
 requests
 toolz
-memory_profiler
